; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/eval/extr_eval.c_parse_operator.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/eval/extr_eval.c_parse_operator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8, i64 (i8**)* }

@operator_parsers = common dso_local global %struct.TYPE_2__* null, align 8
@EVAL_OPERATOR_NOP = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8**, i32*)* @parse_operator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @parse_operator(i8** %0, i32* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8**, i8*** %4, align 8
  %8 = call i32 @skip_spaces(i8** %7)
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %47, %2
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @operator_parsers, align 8
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i64 (i8**)*, i64 (i8**)** %14, align 8
  %16 = icmp ne i64 (i8**)* %15, null
  br i1 %16, label %17, label %50

17:                                               ; preds = %9
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @operator_parsers, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i64 (i8**)*, i64 (i8**)** %22, align 8
  %24 = load i8**, i8*** %4, align 8
  %25 = call i64 %23(i8** %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %46

27:                                               ; preds = %17
  %28 = load i32*, i32** %5, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %39

30:                                               ; preds = %27
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @operator_parsers, align 8
  %32 = load i32, i32* %6, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i8, i8* %35, align 8
  %37 = call i32 @eval_precedence(i8 zeroext %36)
  %38 = load i32*, i32** %5, align 8
  store i32 %37, i32* %38, align 4
  br label %39

39:                                               ; preds = %30, %27
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** @operator_parsers, align 8
  %41 = load i32, i32* %6, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i8, i8* %44, align 8
  store i8 %45, i8* %3, align 1
  br label %52

46:                                               ; preds = %17
  br label %47

47:                                               ; preds = %46
  %48 = load i32, i32* %6, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %6, align 4
  br label %9

50:                                               ; preds = %9
  %51 = load i8, i8* @EVAL_OPERATOR_NOP, align 1
  store i8 %51, i8* %3, align 1
  br label %52

52:                                               ; preds = %50, %39
  %53 = load i8, i8* %3, align 1
  ret i8 %53
}

declare dso_local i32 @skip_spaces(i8**) #1

declare dso_local i32 @eval_precedence(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
